Correctly load the logo and increase header z-index

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -60,7 +60,7 @@ header {
   margin-bottom: 5px;
   font-size: 1.2em;
   font-family: "Combo", cursive;
-  z-index: 1;
+  z-index: 100;
   position: sticky;
   top: 0;
 }
